--- a/index.html
+++ b/index.html
@@ -115,7 +115,79 @@
                     this.dynamic_flash_ms[name] = this.DEFAULT_FLASH_MS;
                 }
             }
+// Event Listener for Canvas Clicks
+        canvas.addEventListener('click', handleCanvasClick);
 
+       // Event Listener for Touch Start
+        canvas.addEventListener('touchstart', handleTouchStart);
+
+
+         // Handle Touch Start Events
+        function handleTouchStart(event) {
+           event.preventDefault(); // prevent simulated mouse events
+            const touch = event.touches[0]; // Get the first touch point
+             const canvasRect = canvas.getBoundingClientRect();
+             const touchX = touch.clientX - canvasRect.left;
+            const touchY = touch.clientY - canvasRect.top;
+            
+            // Call the click handler
+           handleCanvasClick({
+              clientX: touchX + canvasRect.left,
+              clientY: touchY + canvasRect.top,
+           });
+        }
+
+        // Handle Canvas Clicks for Tagging Runners or Bases
+        function handleCanvasClick(event) {
+             const canvasRect = canvas.getBoundingClientRect();
+            const clickX = event.clientX - canvasRect.left;
+            const clickY = event.clientY - canvasRect.top;
+
+            let tagged = false;
+           let runner_to_tag = null;
+
+            // Check for clicks on runners
+           for (const runner of logic.runners) {
+                if (!runner.isOut) {
+                   const [x, y] = runner.pos;
+                    const distance = Math.hypot(clickX - x, clickY - y);
+                   if (distance < 20) {
+                       runner_to_tag = runner;
+                        tagged = true;
+                       break;
+                   }
+               }
+           }
+
+           if (tagged && runner_to_tag) {
+               tagRunnerOut(runner_to_tag);
+               return;
+           }
+
+            // Check for clicks on bases
+            for (const baseName in logic.base_coords) {
+                const [bx, by] = logic.base_coords[baseName];
+                const baseDistance = Math.hypot(clickX - bx, clickY - by);
+                if (baseDistance < 20) {
+                   for (const runner of logic.runners) {
+                        if (runner.target === baseName && !runner.isOut) {
+                           tagRunnerOut(runner, baseName);
+                            return;
+                       }
+                    }
+                }
+            }
+
+            // Check for clicks on pitcher's mound
+            const mx = (base_coords.home[0] + base_coords.second[0]) / 2;
+            const my = (base_coords.home[1] + base_coords.second[1]) / 2;
+           const mound_radius = canvasWidth * 0.02;
+            const moundDistance = Math.hypot(clickX - mx, clickY - my);
+
+            if (moundDistance < mound_radius * 5) {
+               moveRunners();
+           }
+        }
             // Record an out and handle inning transitions
             recordOut() {
                 this.outs++;
