--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             button {
                 padding: 10px 12px;
                 font-size: 0.9em;
-                flex: 1 1 45%;
+                flex: 1 1 %;
             }
 
             .display-section {
@@ -124,7 +124,7 @@
 
     <script>
         // **Global Speed Factor**
-        const SPEED_FACTOR = 0.45; // 45% of original speed
+        const SPEED_FACTOR = 0.20; // 45% of original speed
 
         // Runner Class
         class Runner {
