--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base Coach Simulator</title>
+    <title>Base Coach Simulator 1.0</title>
     <style>
         /* Reset default margins and paddings */
         * {
@@ -12,14 +12,20 @@
             padding: 0;
         }
 
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* Prevent scrolling */
+        }
+
         body {
-            font-family: sans-serif;
+            font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: #f0f0f0;
-            min-height: 100vh;
-            padding: 10px; /* Added padding for better spacing on mobile */
+            height: 100%;
+            padding: 10px;
         }
 
         #game-container {
@@ -27,79 +33,82 @@
             flex-direction: column;
             align-items: center;
             width: 100%;
-            max-width: 600px; /* Limit maximum width for larger screens */
+            height: 100%;
         }
 
         /* Responsive Canvas */
         canvas {
-            border: 1px solid black;
+            border: 2px solid black;
             background-color: green;
-            width: 100%;
-            height: auto;
+            width: 90vw;
+            height: 90vh;
+            max-width: 800px;
+            max-height: 800px;
             box-sizing: border-box;
             touch-action: none; /* Prevent default touch behaviors on canvas */
         }
 
-        #button-container {
+        #button-container, #action-buttons {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            width: 100%;
-            margin-top: 10px;
+            width: 90vw;
+            max-width: 800px;
+            margin-top: 15px;
         }
 
         button {
-            margin: 5px;
-            padding: 12px 16px;
+            margin: 8px;
+            padding: 16px 24px;
             cursor: pointer;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             flex: 1 1 40%;
-            font-size: 1em;
-            min-width: 100px; /* Ensure buttons are not too small */
+            font-size: 1.2em;
+            min-width: 120px;
+            transition: background-color 0.3s;
         }
 
         button:hover {
             background-color: #367c39;
         }
 
-        /* Additional Buttons */
-        #action-buttons {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            width: 100%;
-            margin-top: 10px;
-        }
-
         /* Display Sections */
         .display-section {
-            margin-top: 10px;
-            font-size: 1em;
+            margin-top: 15px;
+            font-size: 1.2em;
             text-align: center;
         }
 
         .out-icon {
             display: inline-block;
-            width: 10px;
-            height: 10px;
+            width: 14px;
+            height: 14px;
             background-color: red;
             border-radius: 50%;
-            margin-right: 2px;
+            margin-right: 4px;
         }
 
         /* Media Queries for Smaller Screens */
         @media (max-width: 480px) {
+            canvas {
+                width: 95vw;
+                height: 70vh;
+                max-width: none;
+                max-height: none;
+            }
+
             button {
-                padding: 10px 12px;
-                font-size: 0.9em;
-                flex: 1 1 %;
+                padding: 14px 20px;
+                font-size: 1em;
+                flex: 1 1 45%;
+                min-width: 100px;
             }
 
             .display-section {
-                font-size: 0.9em;
+                font-size: 1em;
             }
         }
     </style>
@@ -124,7 +133,7 @@
 
     <script>
         // **Global Speed Factor**
-        const SPEED_FACTOR = 0.55; // 45% of original speed
+        const SPEED_FACTOR = 0.55; // 55% of original speed
 
         // Runner Class
         class Runner {
@@ -392,15 +401,15 @@
         const canvas = document.getElementById('baseballCanvas');
         const ctx = canvas.getContext('2d');
 
-        let canvasWidth = 500;
-        let canvasHeight = 500;
+        let canvasWidth = 800; // Initial canvas width
+        let canvasHeight = 800; // Initial canvas height
 
         // Define Base Coordinates
         const base_coords = {
-            "home": [canvasWidth / 2, canvasHeight * 0.8],
-            "first": [canvasWidth * 0.7, canvasHeight * 0.6],
-            "second": [canvasWidth / 2, canvasHeight * 0.4],
-            "third": [canvasWidth * 0.3, canvasHeight * 0.6]
+            "home": [canvasWidth / 2, canvasHeight * 0.85],
+            "first": [canvasWidth * 0.75, canvasHeight * 0.65],
+            "second": [canvasWidth / 2, canvasHeight * 0.45],
+            "third": [canvasWidth * 0.25, canvasHeight * 0.65]
         };
 
         // Initialize Game Logic
@@ -414,8 +423,8 @@
             // Calculate the desired width and height based on the container's width
             const container = document.getElementById('game-container');
             const computedStyle = getComputedStyle(container);
-            const width = parseInt(computedStyle.width) - 20; // Subtract padding
-            const height = width; // Keep canvas square
+            const width = Math.min(window.innerWidth, 1200) * 0.9; // 90% of viewport width, max 1200px
+            const height = Math.min(window.innerHeight, 900) * 0.9; // 90% of viewport height, max 900px
 
             // Set the canvas CSS size
             canvas.style.width = `${width}px`;
@@ -431,10 +440,10 @@
 
             // Update base coordinates based on new canvas size
             logic.base_coords = {
-                "home": [canvasWidth / 2, canvasHeight * 0.8],
-                "first": [canvasWidth * 0.7, canvasHeight * 0.6],
-                "second": [canvasWidth / 2, canvasHeight * 0.4],
-                "third": [canvasWidth * 0.3, canvasHeight * 0.6]
+                "home": [canvasWidth / 2, canvasHeight * 0.85],
+                "first": [canvasWidth * 0.75, canvasHeight * 0.65],
+                "second": [canvasWidth / 2, canvasHeight * 0.45],
+                "third": [canvasWidth * 0.25, canvasHeight * 0.65]
             };
 
             // Reset the game to update base positions
@@ -446,8 +455,12 @@
         // Initialize the canvas size
         resizeCanvas();
 
-        // Adjust canvas size on window resize
-        window.addEventListener('resize', resizeCanvas);
+        // Adjust canvas size on window resize with debounce
+        let resizeTimeout;
+        window.addEventListener('resize', () => {
+            clearTimeout(resizeTimeout);
+            resizeTimeout = setTimeout(resizeCanvas, 200);
+        });
 
         // Reset the game scenario
         function resetScenario() {
@@ -514,7 +527,7 @@
                 if (!runner.isOut) {
                     const [x, y] = runner.pos;
                     const distance = Math.hypot(clickX - x, clickY - y);
-                    const runnerRadius = canvasWidth * 0.02; // Dynamic runner size
+                    const runnerRadius = canvasWidth * 0.025; // Enlarged runner size
                     if (distance < runnerRadius * 1.5) { // Increased sensitivity
                         runner_to_tag = runner;
                         tagged = true;
@@ -532,7 +545,7 @@
             for (const baseName in logic.base_coords) {
                 const [bx, by] = logic.base_coords[baseName];
                 const baseDistance = Math.hypot(clickX - bx, clickY - by);
-                const baseRadius = canvasWidth * 0.03; // Dynamic base size
+                const baseRadius = canvasWidth * 0.035; // Enlarged base size
                 if (baseDistance < baseRadius * 1.5) { // Increased sensitivity
                     for (const runner of logic.runners) {
                         if (runner.target === baseName && !runner.isOut) {
@@ -546,7 +559,7 @@
             // Check for interactions on pitcher's mound
             const mound_x = (logic.base_coords.home[0] + logic.base_coords.second[0]) / 2;
             const mound_y = (logic.base_coords.home[1] + logic.base_coords.second[1]) / 2;
-            const mound_radius = canvasWidth * 0.02;
+            const mound_radius = canvasWidth * 0.025; // Enlarged mound radius
             const moundDistance = Math.hypot(clickX - mound_x, clickY - mound_y);
 
             if (moundDistance < mound_radius * 5) {
@@ -602,7 +615,7 @@
             // Draw the infield diamond (Brown Polygon)
             ctx.fillStyle = "brown";
             ctx.strokeStyle = "white";
-            ctx.lineWidth = 3;
+            ctx.lineWidth = 4;
             ctx.beginPath();
             ctx.moveTo(home[0], home[1]);
             ctx.lineTo(first[0], first[1]);
@@ -625,10 +638,10 @@
             }
 
             // Foul lines (White lines extended from home)
-            const home_first_ext = extended_line(home[0], home[1], first[0], first[1], canvasWidth * 0.4);
-            const home_third_ext = extended_line(home[0], home[1], third[0], third[1], canvasWidth * 0.4);
+            const home_first_ext = extended_line(home[0], home[1], first[0], first[1], canvasWidth * 0.5);
+            const home_third_ext = extended_line(home[0], home[1], third[0], third[1], canvasWidth * 0.5);
             ctx.strokeStyle = "white";
-            ctx.lineWidth = 2;
+            ctx.lineWidth = 3;
 
             // Draw first foul line
             ctx.beginPath();
@@ -644,10 +657,10 @@
 
             // Inverted fence (Gray Arc)
             const fence_center_x = canvasWidth / 2;
-            const fence_center_y = canvasHeight * 0.59; // Adjusted center Y
-            const fence_radius = canvasWidth * 0.36; // Adjusted radius
+            const fence_center_y = canvasHeight * 0.55; // Adjusted center Y
+            const fence_radius = canvasWidth * 0.4; // Adjusted radius
             ctx.strokeStyle = "gray";
-            ctx.lineWidth = 3;
+            ctx.lineWidth = 4;
             ctx.beginPath();
             ctx.arc(fence_center_x, fence_center_y, fence_radius, Math.PI, Math.PI * 2);
             ctx.stroke();
@@ -655,21 +668,23 @@
             // Pitcher's mound (Tan Circle)
             const mx = (home[0] + second[0]) / 2;
             const my = (home[1] + second[1]) / 2;
-            const mound_radius = canvasWidth * 0.02; // Adjusted mound radius
+            const mound_radius = canvasWidth * 0.03; // Enlarged mound radius
             ctx.fillStyle = "tan";
             ctx.strokeStyle = "black";
+            ctx.lineWidth = 2;
             ctx.beginPath();
             ctx.arc(mx, my, mound_radius, 0, 2 * Math.PI);
             ctx.fill();
             ctx.stroke();
 
             // Draw bases (Colored Circles)
-            const BASE_RADIUS = canvasWidth * 0.03;
+            const BASE_RADIUS = canvasWidth * 0.04; // Enlarged base radius
             for (const base_name in bc) {
                 const [x, y] = bc[base_name];
                 const color = logic.base_colors[base_name];
                 ctx.fillStyle = color;
                 ctx.strokeStyle = "black";
+                ctx.lineWidth = 3;
                 ctx.beginPath();
                 ctx.arc(x, y, BASE_RADIUS, 0, 2 * Math.PI);
                 ctx.fill();
@@ -677,10 +692,22 @@
 
                 // Label the base
                 ctx.fillStyle = "white";
-                ctx.font = `${canvasWidth * 0.015}px Arial`; // Dynamic font size
+                ctx.font = `${canvasWidth * 0.02}px Arial`; // Enlarged font size
                 ctx.textAlign = "center";
-                ctx.fillText(base_name.toUpperCase(), x, y - BASE_RADIUS - 5);
+                ctx.fillText(base_name.toUpperCase(), x, y - BASE_RADIUS - 10);
             }
+
+            // **Add "Base Coach 1.0" Text on the Field**
+            ctx.fillStyle = "yellow"; // Choose a contrasting color
+            ctx.strokeStyle = "black";
+            ctx.lineWidth = 2;
+            ctx.font = `${canvasWidth * 0.03}px Arial`; // Dynamic font size based on canvas width
+            ctx.textAlign = "center";
+            ctx.textBaseline = "middle";
+            ctx.fillText("Base Coach 1.0", fence_center_x, canvasHeight * 0.15); // Positioned near the top center
+
+            // Optionally, add a stroke around the text for better visibility
+            ctx.strokeText("Base Coach 1.0", fence_center_x, canvasHeight * 0.15);
         }
 
         // Draw the runners on the field
@@ -690,8 +717,9 @@
                     const [x, y] = r.pos;
                     ctx.fillStyle = "red";
                     ctx.strokeStyle = "black";
+                    ctx.lineWidth = 2;
                     ctx.beginPath();
-                    ctx.arc(x, y, canvasWidth * 0.02, 0, 2 * Math.PI); // Dynamic runner size
+                    ctx.arc(x, y, canvasWidth * 0.025, 0, 2 * Math.PI); // Enlarged runner size
                     ctx.fill();
                     ctx.stroke();
                 }
